# jmake

./: .gitignore  1-main.js  Cargo.toml  README.md  getvsvarsall.bat  main.js
src/: main.rs
toolchain/: detect.js  detect_toolchain_msvc.js
