[package]
name = "jmake"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "filedescriptor", "use-dev-tty"] }
rquickjs = { version = "0.6.2", features = ["futures", "rust-alloc", "loader", "dyn-load"] }
shellwords = "1.1.0"
signal-hook = { version = "0.3.17", features = ["cc"] }
which = { version = "6.0.1", features = ["regex"] }
winapi = "0.3.9"
tempfile = "3.10.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
features = "0.10.0"
encoding = "0.2.33"
serde = "1.0.204"
toml = "0.8.14"